--- a/MVCTutorial/MVCTutorial/MVCTutorial.csproj
+++ b/MVCTutorial/MVCTutorial/MVCTutorial.csproj
@@ -171,6 +171,8 @@
     <Content Include="Views\Employee\ShowEmployee.cshtml" />
     <Content Include="Views\Employee\ShowEmployees.cshtml" />
     <Content Include="Views\Custom\Index2.cshtml" />
+    <Content Include="Views\Employee\GetEmployees.cshtml" />
+    <Content Include="Views\Employee\GetMyEmployee.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
