--- a/MVCTutorial/MVCTutorial/MVCTutorial.csproj
+++ b/MVCTutorial/MVCTutorial/MVCTutorial.csproj
@@ -148,6 +148,8 @@
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -178,6 +180,9 @@
     <Content Include="Views\Employee\ValidateEmployee.cshtml" />
     <Content Include="Views\Employee\ValidateEmp.cshtml" />
     <Content Include="Views\Employee\JqueryView.cshtml" />
+    <Content Include="Views\Employee\GetAjax.cshtml" />
+    <Content Include="Views\Employee\AddEmployee.cshtml" />
+    <Content Include="Views\Employee\AjaxForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
